# plasma-willabweather

./: CMakeLists.txt  COPYING  CTestTestfile.cmake  README  config.cpp  config.h  config.ui  install  plasma-applet-willabweather.desktop  plasma-willabweather.cpp  plasma-willabweather.h  willabweather.spec
